--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 venv/
 mlruns/
 logs/
-MLOPS_PROJECT_1.egg-info/
+mlops_project_1.egg-info/
+application.py
+custom_jenkins/
+static/
+templates/
+artifacts/
